force-app/main/default/objects/BLN_TriggerSetting__mdt/BLN_TriggerSetting__mdt.object-meta.xml
<CustomObject>
    <description>Trigger Metadata used for all triggers</description>
    <label>Trigger Setting</label>
    <pluralLabel>Trigger Settings</pluralLabel>
</CustomObject>