force-app/main/default/objects/BLN_TriggerSetting__mdt/fields/BLN_Active__c.field-meta.xml
<CustomField>
    <fullName>BLN_Active__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Active</label>
    <type>Checkbox</type>
</CustomField>