force-app/main/default/objects/BLN_TriggerSetting__mdt/fields/BLN_AfterDelete__c.field-meta.xml
<CustomField>
    <fullName>BLN_AfterDelete__c</fullName>
    <defaultValue>false</defaultValue>
    <label>After Delete</label>
    <type>Checkbox</type>
</CustomField>