force-app/main/default/objects/BLN_TriggerSetting__mdt/fields/BLN_AfterInsert__c.field-meta.xml
<CustomField>
    <fullName>BLN_AfterInsert__c</fullName>
    <defaultValue>false</defaultValue>
    <label>After Insert</label>
    <type>Checkbox</type>
</CustomField>