force-app/main/default/objects/BLN_TriggerSetting__mdt/fields/BLN_AfterUndelete__c.field-meta.xml
<CustomField>
    <fullName>BLN_AfterUndelete__c</fullName>
    <defaultValue>false</defaultValue>
    <label>After Undelete</label>
    <type>Checkbox</type>
</CustomField>