force-app/main/default/objects/BLN_TriggerSetting__mdt/fields/BLN_AfterUpdate__c.field-meta.xml
<CustomField>
    <fullName>BLN_AfterUpdate__c</fullName>
    <defaultValue>false</defaultValue>
    <label>After Update</label>
    <type>Checkbox</type>
</CustomField>