force-app/main/default/objects/BLN_TriggerSetting__mdt/fields/BLN_BeforeDelete__c.field-meta.xml
<CustomField>
    <fullName>BLN_BeforeDelete__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Before Delete</label>
    <type>Checkbox</type>
</CustomField>