force-app/main/default/objects/BLN_TriggerSetting__mdt/fields/BLN_BeforeInsert__c.field-meta.xml
<CustomField>
    <fullName>BLN_BeforeInsert__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Before Insert</label>
    <type>Checkbox</type>
</CustomField>