force-app/main/default/objects/BLN_TriggerSetting__mdt/fields/BLN_BeforeUpdate__c.field-meta.xml
<CustomField>
    <fullName>BLN_BeforeUpdate__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Before Update</label>
    <type>Checkbox</type>
</CustomField>