force-app/main/default/objects/BLN_TriggerSetting__mdt/fields/BLN_Object__c.field-meta.xml
<CustomField>
    <fullName>BLN_Object__c</fullName>
    <label>Object</label>
    <length>255</length>
    <type>Text</type>
</CustomField>